--- a/tasks/trafficlight/style.css
+++ b/tasks/trafficlight/style.css
@@ -81,3 +81,21 @@ a:hover {
     border-radius: 50%;
     margin: 6px;
 }
+.red {
+    background-color:#290404;
+}
+.yellow {
+    background-color:#2e2207;
+}
+.green {
+    background-color:#083810;
+}
+.red_active {
+    background-color:#ff1313;
+}
+.yellow_active {
+    background-color:#ffb413;
+}
+.green_active {
+    background-color:#13ff3a;
+}
