--- a/tasks/loop_text/style.css
+++ b/tasks/loop_text/style.css
@@ -13,7 +13,7 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    height: 800px;
+    height: 600px;
     width: 400px;
     background-color: #fff;
     border-radius: 0.5rem;
@@ -37,6 +37,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -67,4 +72,40 @@ a {
 }
 a:hover {
     background-color: #ff976d;
+}
+
+button {
+    margin: 5px;
+    color: white;
+    font-weight: 600;
+    border-radius: 0.4rem;
+    border-color: #ff6e35;
+    background-color: #ff6e35;
+    border-style: none;
+    height: 25px;
+    min-width: min-content;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+    text-align: center;
+    text-decoration: none;
+    padding-top: 5px;
+}
+button:hover {
+    background-color: #ff976d;
+}
+
+#numbers { 
+    color: #ff6e35;
+    font-weight: 800px;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+
+.vowel {
+    display: flex;
+    justify-content: center;
+    color: #ff6e35;
+    font-weight: 800px;
+    font-size: 30px;
+    margin-bottom: 30px;
 }
