--- a/tasks/template/style.css
+++ b/tasks/template/style.css
@@ -29,8 +29,9 @@ body {
     background-color:#c9c9c9;
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     height: 1px;
-    width: 90%;
-    margin: 3px;
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .center {
