--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-top: 10%;
+    margin-top: 50px;
+    margin-top: 50px;
 }
 .container {
     display: flex;
