--- a/tasks/chatbot/style.css
+++ b/tasks/chatbot/style.css
@@ -8,8 +8,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-top: 50px;
-    margin-top: 50px;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 .container {
     display: flex;
@@ -103,7 +103,7 @@ input {
     border-color: #ce5b2d;
     background-color: #ffbb93;
     height: 25px;
-    min-width: min-content;
+    min-width: 400px;
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     text-align: center;
     text-decoration: none;
@@ -132,4 +132,17 @@ td {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+#chat {
+    background-color: #c9c9c979;
+    border: solid #ff6e35 2px;
+    border-radius: 15px;
+    margin: 10px;
+    width: 95%;
+    height: 400px;
+    padding: 10px;
+    font-family: sans-serif;
+    font-size: 16px;
+    color:#3b3b3b;
 }
