--- a/tasks/guessnumber/style.css
+++ b/tasks/guessnumber/style.css
@@ -31,8 +31,8 @@ body {
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     height: 1px;
     width: 100%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .center {
@@ -132,4 +132,19 @@ td {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+#answerImg {
+    height: 190px;
+    width: 80px;
+    border:#ce5b2d solid 1px;
+    border-radius: 5px;
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
