--- a/tasks/pokemon_game/style.css
+++ b/tasks/pokemon_game/style.css
@@ -188,12 +188,12 @@ td {
     overflow: hidden;
 }
 .pkmn_sel {
-    width: 100%;
-    height: 100%;
+    width: 80px;
+    height: 80px;
 }
 .game_sel {
     overflow: hidden;
-    height: 110px;
+    min-height: 110px;
     width: 650px;
     border: solid 4px rgb(107, 107, 107);
     border-radius: 25px;
@@ -201,8 +201,8 @@ td {
 }
 
 .switch {
-    height: 100%;
-    width: 100%;
+    width: 80px;
+    height: 80px;
     border: none;
     background-color: #ffffff;
     border-radius: 10px;
