--- a/tasks/pokemon_game/style.css
+++ b/tasks/pokemon_game/style.css
@@ -666,3 +666,16 @@ td {
     line-height: 20px;
     user-select: none;
 }
+
+.loading {
+    display: block;
+    position: relative;
+    top: -1%;
+    left: -1%;
+    height: 350px;
+    width: 650px;
+    border: solid 5px rgb(43, 43, 43);
+    border-radius: 25px;
+    background: url('img/loading.gif') center no-repeat;
+    background-size: cover;
+}
