--- a/tasks/pokemon_game/style.css
+++ b/tasks/pokemon_game/style.css
@@ -118,6 +118,7 @@ td {
 }
 
 .game_app {
+    display: flex;
     position: relative;
     overflow: hidden;
     background: url('img/pkmn_bg.gif') no-repeat;
@@ -126,6 +127,34 @@ td {
     width: 650px;
     border: solid 5px rgb(43, 43, 43);
     border-radius: 25px;
+    box-shadow: 0px 3px 142px 29px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 0px 3px 142px 29px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 3px 142px 29px rgba(0,0,0,0.75);
+}
+.game_holder {
+    display: flex;
+    position: absolute;
+    height: 350px;
+    width: 650px;
+    top: 18%;
+    left: 18%;
+}
+
+.pkmn_canvas {
+    border: solid 5px rgb(43, 43, 43);
+    border-radius: 15px;
+    color: black;
+}
+
+.canvas_blank {
+    display: flex;
+    position: absolute;
+    background-color: black;
+    opacity: 0%;
+    height: 600px;
+    width: 1024px;
+    border-radius: 15px;
+    border: solid 5px rgb(43, 43, 43);
 }
 
 #pkmn_sprite_front {
@@ -596,7 +625,8 @@ td {
 .pkball_box {
     display:block;
     position: relative;
-    top: -140px;
+    top: 32px;
+    left: -298px;
     margin: 10px;
     height: 65px;
     width: 65px;
@@ -613,8 +643,8 @@ td {
     height: 50px;
     width: min-content;
     max-width: 390px;
-    top: -210px;
-    left: -55px;
+    top: 47px;
+    left: -429px;
     z-index: 10;
     visibility: hidden;
     padding-left: 70px;
@@ -671,11 +701,18 @@ td {
     display: block;
     position: relative;
     top: -1%;
-    left: -1%;
+    left: 0;
     height: 350px;
-    width: 650px;
+    width: 690px;
     border: solid 5px rgb(43, 43, 43);
-    border-radius: 25px;
     background: url('img/loading.gif') center no-repeat;
     background-size: cover;
+}
+.game_boundary {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    top: 0;
+    height: 900px;
+    width: 100%;
 }
